force-app/main/default/objects/AP_ApprovalHistory__c/AP_ApprovalHistory__c.object-meta.xml
<CustomObject>
    <label>AP_ApprovalInstanceHistoryItem</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>AP_ApprovalHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP_ApprovalInstanceHistoryItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>