force-app/main/default/objects/AP_ApprovalHistory__c/fields/ApprovalCandidateRecordId__c.field-meta.xml
<CustomField>
    <fullName>ApprovalCandidateRecordId__c</fullName>
    <label>ApprovalCandidateRecordId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>