force-app/main/default/objects/AP_ApprovalHistory__c/fields/ApprovalProcessStepInstance__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessStepInstance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApprovalProcessStepInstance</label>
    <referenceTo>ApprovalProcessStepInstance__c</referenceTo>
    <relationshipLabel>AP_ApprovalInstanceHistoryItems</relationshipLabel>
    <relationshipName>AP_ApprovalInstanceHistoryItems</relationshipName>
    <type>Lookup</type>
</CustomField>